# Barbie-Fashion-Tycoon

./: .gitignore  CMakeLists.txt  README.md
include/: GameManager.h  MainScreen.h  fashionShow.h  finalfashionshow.h  inventory.h  logger.h  outfit.h  play.h  screen1.cpp  screen1.h  screen2.h  screen4.h  shoes.h  template.h
source/: GameManager.cpp  MainScreen.cpp  fashionShow.cpp  finalfashionshow.cpp  inventory.cpp  logger.cpp  main.cpp  outfit.cpp  play.cpp  screen1.cpp  screen2.cpp  screen4.cpp  shoes.cpp
